@@ -11,17 +11,12 @@ package org.opensearch.client.codegen.model;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.opensearch.client.codegen.openapi.OpenApiSchema;
 import org.opensearch.client.codegen.utils.Strings;
 
 public class EnumShape extends Shape {
     public static EnumShape from(Context ctx, String name, OpenApiSchema schema) {
-        return new EnumShape(
-            ctx.getNamespace(),
-            name,
-            schema.getEnum().orElseThrow().stream().map(Variant::new).collect(Collectors.toList())
-        );
+        return new EnumShape(ctx.getNamespace(), name, schema.getEnum().orElseThrow().stream().map(Variant::new).toList());
     }
 
     private final List<Variant> variants;
